# soto

./: .gitignore  README.md
example/: .gitignore  README.md  SoTo.Local.toml  SoTo.toml  test_cube.fbx  test_cube.toml  test_cubes.fbx  test_cubes.mb  test_cubes.toml  test_cubesASCII.fbx  test_cubes_move.fbx
fbx-simple/: Cargo.toml
fbx-simple/src/: lib.rs  raw.rs  simple.rs
soto/: Cargo.toml
soto-cli/: Cargo.toml
soto-fbx/: Cargo.toml  test.smd
soto-fbx/src/: main.rs  qc.rs  smd.rs  task.rs
soto/src/: build.rs  error.rs  files.rs  lib.rs  task.rs
sotolib-fbx/: Cargo.toml
sotolib-fbx/src/: lib.rs  raw.rs  simple.rs  tree.rs
sotolib-fbx/src/animation/: mod.rs
sotolib-fbx/src/simple/: animation.rs  geometry.rs  mod.rs  model.rs  object.rs  properties.rs
sotolib-smd/: Cargo.toml
sotolib-smd/src/: export.rs  lib.rs
